@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2022, University of Oslo
+ * Copyright (c) 2004-2023, University of Oslo
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -32,13 +32,13 @@ import static java.lang.System.currentTimeMillis;
 import static java.util.Collections.unmodifiableCollection;
 import static java.util.function.Predicate.not;
 import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
-import static java.util.stream.Collectors.toUnmodifiableList;
 import static java.util.stream.Collectors.toUnmodifiableSet;
 import static java.util.stream.StreamSupport.stream;
 import static org.hisp.dhis.commons.collection.ListUtils.getDuplicates;
 import static org.hisp.dhis.dataintegrity.DataIntegrityDetails.DataIntegrityIssue.toIssue;
 import static org.hisp.dhis.dataintegrity.DataIntegrityDetails.DataIntegrityIssue.toRefsList;
+import static org.hisp.dhis.dataintegrity.DataIntegrityYamlReader.ResourceLocation.CLASS_PATH;
+import static org.hisp.dhis.dataintegrity.DataIntegrityYamlReader.ResourceLocation.FILE_SYSTEM;
 import static org.hisp.dhis.dataintegrity.DataIntegrityYamlReader.readDataIntegrityYaml;
 import static org.hisp.dhis.expression.ParseType.INDICATOR_EXPRESSION;
 import static org.hisp.dhis.expression.ParseType.VALIDATION_RULE_EXPRESSION;
@@ -59,6 +59,7 @@ import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.BinaryOperator;
+import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
@@ -68,10 +69,10 @@ import javax.annotation.Nonnull;
 import javax.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections4.CollectionUtils;
 import org.hisp.dhis.antlr.ParserException;
 import org.hisp.dhis.cache.Cache;
 import org.hisp.dhis.cache.CacheProvider;
-import org.hisp.dhis.category.CategoryCombo;
 import org.hisp.dhis.category.CategoryService;
 import org.hisp.dhis.common.IdentifiableObject;
 import org.hisp.dhis.dataelement.DataElement;
@@ -84,6 +85,8 @@ import org.hisp.dhis.dataset.DataSetService;
 import org.hisp.dhis.expression.Expression;
 import org.hisp.dhis.expression.ExpressionService;
 import org.hisp.dhis.expression.ExpressionValidationOutcome;
+import org.hisp.dhis.external.location.LocationManager;
+import org.hisp.dhis.external.location.LocationManagerException;
 import org.hisp.dhis.i18n.I18n;
 import org.hisp.dhis.i18n.I18nManager;
 import org.hisp.dhis.indicator.Indicator;
@@ -95,7 +98,6 @@ import org.hisp.dhis.organisationunit.OrganisationUnitGroupService;
 import org.hisp.dhis.organisationunit.OrganisationUnitService;
 import org.hisp.dhis.period.Period;
 import org.hisp.dhis.period.PeriodService;
-import org.hisp.dhis.period.PeriodType;
 import org.hisp.dhis.program.Program;
 import org.hisp.dhis.program.ProgramIndicator;
 import org.hisp.dhis.program.ProgramIndicatorService;
@@ -124,6 +126,8 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
   private static final String FORMULA_SEPARATOR = "#";
 
   private final I18nManager i18nManager;
+
+  private final LocationManager locationManager;
 
   private final ProgramRuleService programRuleService;
 
@@ -182,7 +186,7 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
     return items
         .map(DataIntegrityIssue::toIssue)
         .sorted(DefaultDataIntegrityService::alphabeticalOrder)
-        .collect(toUnmodifiableList());
+        .toList();
   }
 
   private static <T extends IdentifiableObject> List<DataIntegrityIssue> toIssueList(
@@ -190,7 +194,7 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
     return items
         .map(e -> DataIntegrityIssue.toIssue(e, toRefs.apply(e)))
         .sorted(DefaultDataIntegrityService::alphabeticalOrder)
-        .collect(toUnmodifiableList());
+        .toList();
   }
 
   @Nonnull
@@ -229,33 +233,6 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
   /** Gets all data elements which are not members of any groups. */
   List<DataIntegrityIssue> getDataElementsWithoutGroups() {
     return toSimpleIssueList(dataElementService.getDataElementsWithoutGroups().stream());
-  }
-
-  /** Returns all data elements which are members of data sets with different period types. */
-  List<DataIntegrityIssue> getDataElementsAssignedToDataSetsWithDifferentPeriodTypes() {
-    Collection<DataElement> dataElements = dataElementService.getAllDataElements();
-
-    Collection<DataSet> dataSets = dataSetService.getAllDataSets();
-
-    List<DataIntegrityIssue> issues = new ArrayList<>();
-
-    for (DataElement element : dataElements) {
-      final Set<PeriodType> targetPeriodTypes = new HashSet<>();
-      final List<DataSet> targetDataSets = new ArrayList<>();
-
-      for (DataSet dataSet : dataSets) {
-        if (dataSet.getDataElements().contains(element)) {
-          targetPeriodTypes.add(dataSet.getPeriodType());
-          targetDataSets.add(dataSet);
-        }
-      }
-
-      if (targetPeriodTypes.size() > 1) {
-        issues.add(DataIntegrityIssue.toIssue(element, targetDataSets));
-      }
-    }
-
-    return issues;
   }
 
   /**
@@ -419,9 +396,7 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
                 null,
                 group.getKey(),
                 null,
-                group.getValue().stream()
-                    .map(p -> p.toString() + ":" + p.getUid())
-                    .collect(toUnmodifiableList())));
+                group.getValue().stream().map(p -> p.toString() + ":" + p.getUid()).toList()));
       }
     }
     return issues;
@@ -438,10 +413,6 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
 
   List<DataIntegrityIssue> getOrphanedOrganisationUnits() {
     return toSimpleIssueList(organisationUnitService.getOrphanedOrganisationUnits().stream());
-  }
-
-  List<DataIntegrityIssue> getOrganisationUnitsWithoutGroups() {
-    return toSimpleIssueList(organisationUnitService.getOrganisationUnitsWithoutGroups().stream());
   }
 
   List<DataIntegrityIssue> getOrganisationUnitsViolatingExclusiveGroupSets() {
@@ -487,7 +458,6 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
         issues.add(toIssue(rule, i18n.getString(result.getKey())));
       }
     }
-
     return issues;
   }
 
@@ -504,11 +474,13 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
     try {
       Schema issueSchema = issueIdType == null ? null : schemaService.getDynamicSchema(issueIdType);
       String issueIdTypeName = issueSchema == null ? null : issueSchema.getPlural();
-      checksByName.put(
+      checksByName.putIfAbsent(
           name,
           DataIntegrityCheck.builder()
               .name(name)
               .displayName(info.apply("name", name.replace('_', ' ')))
+              .isSlow(true)
+              .isProgrammatic(true)
               .severity(
                   DataIntegritySeverity.valueOf(
                       info.apply("severity", DataIntegritySeverity.WARNING.name()).toUpperCase()))
@@ -541,18 +513,7 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
    * DataIntegrityCheck} to perform the method as {@link DataIntegrityDetails}.
    */
   public void initIntegrityChecks() {
-    registerNonDatabaseIntegrityCheck(
-        DataIntegrityCheckType.DATA_ELEMENTS_WITHOUT_DATA_SETS,
-        DataElement.class,
-        this::getDataElementsWithoutDataSet);
-    registerNonDatabaseIntegrityCheck(
-        DataIntegrityCheckType.DATA_ELEMENTS_WITHOUT_GROUPS,
-        DataElement.class,
-        this::getDataElementsWithoutGroups);
-    registerNonDatabaseIntegrityCheck(
-        DataIntegrityCheckType.DATA_ELEMENTS_ASSIGNED_TO_DATA_SETS_WITH_DIFFERENT_PERIOD_TYPES,
-        DataElement.class,
-        this::getDataElementsAssignedToDataSetsWithDifferentPeriodTypes);
+
     registerNonDatabaseIntegrityCheck(
         DataIntegrityCheckType.DATA_ELEMENTS_VIOLATING_EXCLUSIVE_GROUP_SETS,
         DataElement.class,
@@ -561,17 +522,6 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
         DataIntegrityCheckType.DATA_ELEMENTS_IN_DATA_SET_NOT_IN_FORM,
         DataSet.class,
         this::getDataElementsInDataSetNotInForm);
-
-    registerNonDatabaseIntegrityCheck(
-        DataIntegrityCheckType.CATEGORY_COMBOS_BEING_INVALID,
-        CategoryCombo.class,
-        this::getInvalidCategoryCombos);
-
-    registerNonDatabaseIntegrityCheck(
-        DataIntegrityCheckType.DATA_SETS_NOT_ASSIGNED_TO_ORG_UNITS,
-        DataSet.class,
-        this::getDataSetsNotAssignedToOrganisationUnits);
-
     registerNonDatabaseIntegrityCheck(
         DataIntegrityCheckType.INDICATORS_WITH_IDENTICAL_FORMULAS,
         null,
@@ -605,10 +555,6 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
         OrganisationUnit.class,
         this::getOrphanedOrganisationUnits);
     registerNonDatabaseIntegrityCheck(
-        DataIntegrityCheckType.ORG_UNITS_WITHOUT_GROUPS,
-        OrganisationUnit.class,
-        this::getOrganisationUnitsWithoutGroups);
-    registerNonDatabaseIntegrityCheck(
         DataIntegrityCheckType.ORG_UNITS_VIOLATING_EXCLUSIVE_GROUP_SETS,
         OrganisationUnit.class,
         this::getOrganisationUnitsViolatingExclusiveGroupSets);
@@ -616,7 +562,6 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
         DataIntegrityCheckType.ORG_UNIT_GROUPS_WITHOUT_GROUP_SETS,
         OrganisationUnitGroup.class,
         this::getOrganisationUnitGroupsWithoutGroupSets);
-
     registerNonDatabaseIntegrityCheck(
         DataIntegrityCheckType.VALIDATION_RULES_WITHOUT_GROUPS,
         ValidationRule.class,
@@ -692,7 +637,14 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
       checks =
           Arrays.stream(DataIntegrityCheckType.values())
               .map(DataIntegrityCheckType::getName)
-              .collect(toUnmodifiableSet());
+              .collect(Collectors.toSet());
+      // Add additional SQL based checks here
+      checks.add("organisation_units_without_groups");
+      checks.add("data_elements_aggregate_no_groups");
+      checks.add("data_elements_aggregate_with_different_period_types");
+      checks.add("data_elements_without_datasets");
+      checks.add("datasets_not_assigned_to_org_units");
+      checks.add("invalid_category_combos");
     }
     runDetailsChecks(checks, progress);
     return new FlattenedDataIntegrityReport(getDetails(checks, -1L));
@@ -720,7 +672,7 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
   private List<DataIntegrityIssue> getInvalidProgramIndicators(
       Function<ProgramIndicator, String> property, Predicate<ProgramIndicator> filter) {
     List<ProgramIndicator> programIndicators =
-        programIndicatorService.getAllProgramIndicators().stream().filter(filter).collect(toList());
+        programIndicatorService.getAllProgramIndicators().stream().filter(filter).toList();
 
     List<DataIntegrityIssue> issues = new ArrayList<>();
     for (ProgramIndicator programIndicator : programIndicators) {
@@ -826,7 +778,7 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
       List<DataIntegrityIssue> groupBy(Function<V, K> property, Collection<V> values) {
     return values.stream().collect(groupingBy(property)).entrySet().stream()
         .map(e -> DataIntegrityIssue.toIssue(e.getKey(), e.getValue()))
-        .collect(toUnmodifiableList());
+        .toList();
   }
 
   /*
@@ -843,7 +795,7 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
     ensureConfigurationsAreLoaded();
     return checks.isEmpty()
         ? unmodifiableCollection(checksByName.values())
-        : expandChecks(checks).stream().map(checksByName::get).collect(toList());
+        : expandChecks(checks, false).stream().map(checksByName::get).toList();
   }
 
   @Nonnull
@@ -858,7 +810,7 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
   public void runSummaryChecks(@Nonnull Set<String> checks, JobProgress progress) {
     runDataIntegrityChecks(
         "Data Integrity summary checks",
-        expandChecks(checks),
+        expandChecks(checks, true),
         progress,
         summaryCache,
         runningSummaryChecks,
@@ -880,7 +832,7 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
   public void runDetailsChecks(@Nonnull Set<String> checks, JobProgress progress) {
     runDataIntegrityChecks(
         "Data Integrity details checks",
-        expandChecks(checks),
+        expandChecks(checks, true),
         progress,
         detailsCache,
         runningDetailsChecks,
@@ -897,7 +849,7 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
   }
 
   private <T> Map<String, T> getCached(Set<String> checks, long timeout, Cache<T> cache) {
-    Set<String> names = expandChecks(checks);
+    Set<String> names = expandChecks(checks, false);
     long giveUpTime = currentTimeMillis() + timeout;
     Map<String, T> resByName = new LinkedHashMap<>();
     boolean retry = false;
@@ -938,7 +890,10 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
       progress.startingProcess("Data Integrity check");
       progress.startingStage(stageDesc, checks.size(), SKIP_ITEM);
       progress.runStage(
-          checks.stream().map(checksByName::get).filter(Objects::nonNull),
+          checks.stream()
+              .map(checksByName::get)
+              .filter(Objects::nonNull)
+              .sorted(DataIntegrityCheck.FAST_TO_SLOW),
           DataIntegrityCheck::getDescription,
           check -> {
             Date startTime = new Date();
@@ -952,6 +907,7 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
               running.remove(check.getName());
             }
             if (res != null) {
+              check.addExecution(currentTimeMillis() - startTime.getTime());
               cache.put(check.getName(), res);
             }
           });
@@ -961,11 +917,11 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
     }
   }
 
-  private Set<String> expandChecks(Set<String> names) {
+  private Set<String> expandChecks(Set<String> names, boolean restricted) {
     ensureConfigurationsAreLoaded();
 
-    if (names == null || names.isEmpty()) {
-      return getDefaultChecks();
+    if (CollectionUtils.isEmpty(names)) {
+      return getDefaultChecks(restricted);
     }
     Set<String> expanded = new LinkedHashSet<>();
 
@@ -977,9 +933,13 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
             .map(DataIntegrityCheck::getName)
             .forEach(expanded::add);
       } else if (name.contains("*")) {
-        String pattern = name.toLowerCase().replace('-', '_').replace("*", ".*");
+        String pattern =
+            name.toLowerCase()
+                .replace('-', '_') // make uniform
+                .replaceAll("[^*_a-z0-9]+", "") // sanitise against regex attacks
+                .replace("*", ".*"); // expand regex wildcard match
         for (DataIntegrityCheck check : checksByName.values()) {
-          if (!check.isSlow() && check.getName().matches(pattern)) {
+          if (check.getName().matches(pattern)) {
             expanded.add(check.getName());
           }
         }
@@ -990,29 +950,92 @@ public class DefaultDataIntegrityService implements DataIntegrityService {
     return expanded;
   }
 
-  private Set<String> getDefaultChecks() {
+  private Set<String> getDefaultChecks(boolean restricted) {
     ensureConfigurationsAreLoaded();
 
+    Predicate<DataIntegrityCheck> filter =
+        restricted ? not(DataIntegrityCheck::isSlow) : check -> true;
     return checksByName.values().stream()
-        .filter(not(DataIntegrityCheck::isSlow))
+        .filter(filter)
         .map(DataIntegrityCheck::getName)
-        .collect(Collectors.toUnmodifiableSet());
+        .collect(toUnmodifiableSet());
   }
 
   private void ensureConfigurationsAreLoaded() {
     if (configurationsAreLoaded.compareAndSet(false, true)) {
+      // load system-packaged data integrity checks
+      loadChecks(CLASS_PATH, "data-integrity-checks.yaml", "data-integrity-checks");
+
       // programmatic checks
       initIntegrityChecks();
 
-      // YAML based checks
-      I18n i18n = i18nManager.getI18n(DataIntegrityService.class);
-      readDataIntegrityYaml(
-          "data-integrity-checks.yaml",
-          check -> checksByName.put(check.getName(), check),
-          (property, defaultValue) ->
-              i18n.getString(format("data_integrity.%s", property), defaultValue),
-          sql -> check -> dataIntegrityStore.querySummary(check, sql),
-          sql -> check -> dataIntegrityStore.queryDetails(check, sql));
+      // load user-packaged custom data integrity checks
+      try {
+        String dhis2Home = locationManager.getExternalDirectoryPath();
+        loadChecks(
+            FILE_SYSTEM,
+            dhis2Home + "/custom-data-integrity-checks.yaml",
+            dhis2Home + "/custom-data-integrity-checks");
+      } catch (LocationManagerException ex) {
+        log.warn(
+            "Could not get DHIS2_HOME external directory. No custom data integrity checks loaded.");
+      }
     }
   }
+
+  private void loadChecks(
+      DataIntegrityYamlReader.ResourceLocation resourceLocation,
+      String yamlFileChecks,
+      String checksDir) {
+    I18n i18n = i18nManager.getI18n(DataIntegrityService.class);
+    readDataIntegrityYaml(
+        new DataIntegrityRecord(
+            resourceLocation,
+            yamlFileChecks,
+            checksDir,
+            addToChecks,
+            (property, defaultValue) ->
+                i18n.getString(format("data_integrity.%s", property), defaultValue),
+            sql -> check -> dataIntegrityStore.querySummary(check, sql),
+            sql -> check -> dataIntegrityStore.queryDetails(check, sql)));
+  }
+
+  /**
+   * Consumer that adds a {@link DataIntegrityCheck} to a map. It only adds the {@link
+   * DataIntegrityCheck} to the map if:
+   *
+   * <ol>
+   *   <li>the {@link DataIntegrityCheck} code is unique
+   *   <li>the map does not already have a key with the same {@link DataIntegrityCheck} name
+   * </ol>
+   */
+  private final Consumer<DataIntegrityCheck> addToChecks =
+      check -> {
+        String checkCode = DataIntegrityCheck.getCodeFromName(check.getName());
+        Set<String> checkCodes =
+            checksByName.keySet().stream()
+                .map(DataIntegrityCheck::getCodeFromName)
+                .collect(Collectors.toSet());
+        if (!checkCodes.contains(checkCode)) {
+          DataIntegrityCheck dataIntegrityCheck = checksByName.putIfAbsent(check.getName(), check);
+          if (dataIntegrityCheck != null) {
+            log.warn(
+                "Data Integrity Check `{}` not added as a check with that name already exists",
+                check.getName());
+          }
+        } else
+          log.warn(
+              "Data Integrity Check `{}` not added as a check with the code `{}` already exists",
+              check.getName(),
+              check.getCode());
+      };
+
+  record DataIntegrityRecord(
+      DataIntegrityYamlReader.ResourceLocation resourceLocation,
+      String yamlFileChecks,
+      String checksDir,
+      Consumer<DataIntegrityCheck> adder,
+      BinaryOperator<String> info,
+      Function<String, Function<DataIntegrityCheck, DataIntegritySummary>> sqlToSummary,
+      Function<String, Function<DataIntegrityCheck, DataIntegrityDetails>> sqlToDetails) {}
 }
