@@ -30,7 +30,6 @@ package org.hisp.dhis.dataset.notifications;
 import static java.lang.String.format;
 import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
-import static org.hisp.dhis.program.notification.NotificationTrigger.SCHEDULED_DAYS_DUE_DATE;
 import static org.hisp.dhis.scheduling.JobProgress.FailurePolicy.SKIP_ITEM_OUTLIER;
 
 import com.google.common.base.Function;
@@ -149,7 +148,7 @@ public class DefaultDataSetNotificationService implements DataSetNotificationSer
   @Override
   public void sendScheduledDataSetNotificationsForDay(Date day, JobProgress progress) {
     List<DataSetNotificationTemplate> templates =
-        dsntService.getScheduledNotifications(SCHEDULED_DAYS_DUE_DATE);
+        dsntService.getScheduledNotifications(DataSetNotificationTrigger.SCHEDULED_DAYS);
 
     if (templates == null || templates.isEmpty()) {
       log.info("No template found");
@@ -231,8 +230,7 @@ public class DefaultDataSetNotificationService implements DataSetNotificationSer
 
   private MessageBatch createBatchForCompletionNotifications(
       CompleteDataSetRegistration registration, Collection<DataSetNotificationTemplate> templates) {
-    return createMessageBatch(
-        templates.stream().map(t -> Map.of(registration, t)).collect(toList()));
+    return createMessageBatch(templates.stream().map(t -> Map.of(registration, t)).toList());
   }
 
   private String createSubjectString(DataSetNotificationTemplate template) {
