@@ -29,12 +29,11 @@ package org.hisp.dhis.reservedvalue.hibernate;
 
 import static com.google.common.base.Preconditions.checkNotNull;
 import static org.hisp.dhis.common.Objects.TRACKEDENTITYATTRIBUTE;
+import static org.hisp.dhis.commons.collection.CollectionUtils.isEmpty;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import javax.persistence.EntityManager;
 import lombok.extern.slf4j.Slf4j;
-import org.hibernate.SessionFactory;
 import org.hibernate.query.Query;
 import org.hisp.dhis.common.Objects;
 import org.hisp.dhis.hibernate.HibernateGenericStore;
@@ -57,11 +56,11 @@ public class HibernateReservedValueStore extends HibernateGenericStore<ReservedV
   private final BatchHandlerFactory batchHandlerFactory;
 
   public HibernateReservedValueStore(
-      SessionFactory sessionFactory,
+      EntityManager entityManager,
       JdbcTemplate jdbcTemplate,
       ApplicationEventPublisher publisher,
       BatchHandlerFactory batchHandlerFactory) {
-    super(sessionFactory, jdbcTemplate, publisher, ReservedValue.class, false);
+    super(entityManager, jdbcTemplate, publisher, ReservedValue.class, false);
 
     checkNotNull(batchHandlerFactory);
 
@@ -71,64 +70,51 @@ public class HibernateReservedValueStore extends HibernateGenericStore<ReservedV
   @Override
   public List<ReservedValue> getAvailableValues(
       ReservedValue reservedValue, List<String> values, String ownerObject) {
-    List<String> availableValues = getIfAvailable(reservedValue, values, ownerObject);
+    if (isEmpty(values) || !reservedValue.getOwnerObject().equals(ownerObject)) {
+      return List.of();
+    }
+    List<String> availableValues = getIfAvailable(reservedValue, values);
 
     return availableValues.stream()
         .map(value -> reservedValue.toBuilder().value(value).build())
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
   public void bulkInsertReservedValues(List<ReservedValue> toAdd) {
-    BatchHandler<ReservedValue> batchHandler =
-        batchHandlerFactory.createBatchHandler(ReservedValueBatchHandler.class).init();
-
-    toAdd.forEach(batchHandler::addObject);
-    batchHandler.flush();
+    try (BatchHandler<ReservedValue> batchHandler =
+        batchHandlerFactory.createBatchHandler(ReservedValueBatchHandler.class).init()) {
+      toAdd.forEach(batchHandler::addObject);
+      batchHandler.flush();
+    } catch (Exception e) {
+      log.error("Failed to bulk insert reserved values", e);
+    }
   }
 
-  private List<String> getIfAvailable(
-      ReservedValue reservedValue, List<String> values, String ownerObject) {
-    // FIX manipulating a collection argument is not ideal, make copy
-    Optional.of(values)
-        .filter(v -> !v.isEmpty() && reservedValue.getOwnerObject().equals(ownerObject))
-        .ifPresent(
-            v ->
-                values.removeAll(
-                    getSession()
-                        .createNamedQuery("getRandomGeneratedAvailableValuesNamedQuery")
-                        .setParameter("teaId", reservedValue.getTrackedEntityAttributeId())
-                        .setParameter("ownerObject", reservedValue.getOwnerObject())
-                        .setParameter("ownerUid", reservedValue.getOwnerUid())
-                        .setParameter("key", reservedValue.getKey())
-                        .setParameter(
-                            "values",
-                            v.parallelStream()
-                                .map(String::toLowerCase)
-                                .collect(Collectors.toList()))
-                        .list()));
+  private List<String> getIfAvailable(ReservedValue reservedValue, List<String> values) {
 
-    return values;
+    List<?> teavOrReservedValues =
+        getSession()
+            .createNamedQuery("getRandomGeneratedValuesNotAvailableNamedQuery")
+            .setParameter("teaId", reservedValue.getTrackedEntityAttributeId())
+            .setParameter("ownerObject", reservedValue.getOwnerObject())
+            .setParameter("ownerUid", reservedValue.getOwnerUid())
+            .setParameter("key", reservedValue.getKey())
+            .setParameter("values", values.stream().map(String::toLowerCase).toList())
+            .list();
+
+    return values.stream().filter(rv -> !teavOrReservedValues.contains(rv)).toList();
   }
 
   @Override
   public void reserveValues(List<ReservedValue> reservedValues) {
-    BatchHandler<ReservedValue> batchHandler =
-        batchHandlerFactory.createBatchHandler(ReservedValueBatchHandler.class).init();
-
-    reservedValues.forEach(batchHandler::addObject);
-    batchHandler.flush();
-  }
-
-  @Override
-  public List<ReservedValue> reserveValuesJpa(ReservedValue reservedValue, List<String> values) {
-    List<ReservedValue> toAdd =
-        values.stream()
-            .map(value -> reservedValue.toBuilder().value(value).build())
-            .collect(Collectors.toList());
-
-    toAdd.forEach(this::save);
-    return toAdd;
+    try (BatchHandler<ReservedValue> batchHandler =
+        batchHandlerFactory.createBatchHandler(ReservedValueBatchHandler.class).init()) {
+      reservedValues.forEach(batchHandler::addObject);
+      batchHandler.flush();
+    } catch (Exception e) {
+      log.error("Failed to reserve values", e);
+    }
   }
 
   @Override
